SERVER-42110 uassert that the integer part of a v0 numeric KeyString value is less than 2^53